# TMP-Tutorial

./: .gitignore  CMakeLists.txt  README.md  main.cpp
FunctorInputSetter/: FunctorInputSetter.h  FunctorInputSetterTester.cpp  FunctorInputSetterTester.h
TupleSplitter/: TupleSplitterTester.cpp  TupleSplitterTester.h
src/: main.cpp
src/SuperSuperFunctor/: SuperFunctor.h  SuperFunctorTester.cpp  SuperFunctorTester.h
src/TupleSplitter/: TupleSplitter.h
